Login Signup Forgot Save Manual Language and Theme Change

--- a/lib/l10n/app_bn.arb
+++ b/lib/l10n/app_bn.arb
@@ -26,7 +26,9 @@
   "enterPass": "পাসওয়ার্ড লিখুন",
   "enterPassValid": "কমপক্ষে ৬ অক্ষরের পাসওয়ার্ড দিন",
   "failedValid": "ভ্যালিডেশন ব্যর্থ হয়েছে",
-  "forgotPasswordText": "পাসওয়ার্ড ভুলে গেছেন?"
+  "forgotPasswordText": "পাসওয়ার্ড ভুলে গেছেন?",
+  "resetSuccessText": "পাসওয়ার্ড রিসেট লিংকটি আপনার ইমেইলে পাঠানো হয়েছে।"
+
 
 }
 
