major update role optimize code

--- a/lib/l10n/app_bn.arb
+++ b/lib/l10n/app_bn.arb
@@ -32,7 +32,7 @@
   "notifications": "বিজ্ঞপ্তি",
   "account": "অ্যাকাউন্ট",
   "profile": "প্রোফাইল",
-  "businessProfile": "ব্যবসায়িক প্রোফাইল",
+  "workerAccount": "কর্মী অ্যাকাউন্ট",
   "digitalPayment": "ডিজিটাল পেমেন্ট",
   "savedAddress": "সংরক্ষিত ঠিকানা",
   "offers": "অফার",
