--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -32,7 +32,7 @@
   "notifications": "Notifications",
   "account": "ACCOUNT",
   "profile": "Profile",
-  "businessProfile": "Business Profile",
+  "workerAccount": "Worker Account",
   "digitalPayment": "Digital Payment",
   "savedAddress": "Saved Address",
   "offers": "OFFERS",
